fix: Heading readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@
        text-align: left;
        font-size: 1.5em;
        margin-left: 2em;
-       color: #7d97ad;
+       color: #2d3c49;
        clear: both;
      }
 
